src/test/ui/did_you_mean/issue-42764.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-42764.rs:11:5
   |
LL |     this_function_expects_a_double_option(n);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-^
   |                                           |
   |                                           expected `DoubleOption<_>`, found `usize`
   |
note: function defined here
  --> $DIR/issue-42764.rs:7:4
   |
LL | fn this_function_expects_a_double_option<T>(d: DoubleOption<T>) {}
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    ------------------
help: provide an argument of the correct type
   |
LL |     this_function_expects_a_double_option({DoubleOption<_>});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-42764.rs:27:33
   |
LL |     let _c = Context { wrapper: Payload{} };
   |                                 ^^^^^^^^^ expected struct `Wrapper`, found struct `Payload`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
